--- a/git/Makefile
+++ b/git/Makefile
@@ -1,9 +1,13 @@
+PWD = $(shell pwd)
+
 install:
-	git config --global include.path "$(PWD)/git/config"
-	git config --global core.excludesfile "$(PWD)/git/ignore"
+	git config --global include.path "$(PWD)/config"
+	git config --global core.excludesfile "$(PWD)/ignore"
+	git config --global init.templatedir "$(PWD)/template"
 
 clean:
 	git config --global --unset include.path
 	git config --global --unset core.excludesfile
+	git config --global --unset init.templatedir
 
 .PHONY: install clean
