--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "git/template/hooks/commit-comments"]
 	path = git/template/hooks/commit-comments
 	url = https://github.com/thebearjew/commit-comments.git
+[submodule "fish/base16"]
+	path = fish/base16
+	url = https://github.com/chriskempson/base16-shell.git
