--- a/nvim/Makefile
+++ b/nvim/Makefile
@@ -4,13 +4,9 @@ PWD = $(shell pwd)
 
 install: python
 	$(LN) ${PWD} $(XDG_CONFIG_HOME)/nvim
-	# nvim +PlugUpdate +qall # Currently doesn't work
-	@echo 'Run NeoVim and execute `:PlugInstall`'
+	nvim +PlugUpgrade +PlugInstall +qa # Currently doesn't work
 
 clean:
 	rm $(XDG_CONFIG_HOME)/nvim
-
-python:
-	pip install --user --upgrade neovim
 
 .PHONY: install clean
