Replace Fisherman with fin

--- a/fish/Makefile
+++ b/fish/Makefile
@@ -2,9 +2,13 @@ XDG_CONFIG_HOME ?= ${HOME}/.config
 
 PWD = $(shell pwd)
 
-install:
-	$(LN) ${PWD}/functions $(XDG_CONFIG_HOME)/fish/functions
-	$(LN) ${PWD}/completions $(XDG_CONFIG_HOME)/fish/completions
-	$(LN) ${PWD}/config.fish $(XDG_CONFIG_HOME)/fish/config.fish
+install: fin
+	$(LN) ${PWD} $(XDG_CONFIG_HOME)/fish
+
+functions/fin.fish:
+	$(WGET) -O$@ https://raw.githubusercontent.com/fishery/fin/master/fin.fish
+
+fin: functions/fin.fish
+	fish -c 'fin'
 
 .PHONY: install
