Use HomeBrew to manage dependencies

--- a/fish/Makefile
+++ b/fish/Makefile
@@ -4,7 +4,7 @@ PWD = $(shell pwd)
 
 install:
 	$(LN) ${PWD} $(XDG_CONFIG_HOME)/fish
-	fish -c 'fin'
+	fish -c 'fundle install'
 
 functions/fin.fish:
 	$(WGET) -O$@ https://raw.githubusercontent.com/fisherman/fin/master/fin.fish
