--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,15 +1,6 @@
-FILES = lein
-
 PWD = $(shell pwd)
 
-install: $(FILES)
-
-lein:
-	$(WGET) -O$@ https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein
-	chmod +x $@
-
-nvr:
-	$(WGET) -O$@ https://raw.githubusercontent.com/mhinz/neovim-remote/master/nvr
-	chmod +x $@
+install:
+	@echo 'Add $(PWD) to your $$PATH'
 
 .PHONY: $(FILES)
