--- a/git/config
+++ b/git/config
@@ -9,7 +9,7 @@
 	ci = commit
 	co = checkout
 	cob = checkout -b
-	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%aN> %G?%Creset' --abbrev-commit
 	pr = pull-request
 	rci = commit --amend --reuse-message HEAD
 	squash = rebase -i @{u}
