--- a/iterm2/Makefile
+++ b/iterm2/Makefile
@@ -2,10 +2,13 @@ ITERM2_CONFIG_PATH ?= ${HOME}/Library/Preferences
 
 PWD = $(shell pwd)
 
-install:
+install: terminfo
 	$(LN) ${PWD}/com.googlecode.iterm2.plist $(ITERM2_CONFIG_PATH)/
+
+terminfo: xterm-256color-italic.terminfo
+	tic $<
 
 clean:
 	rm $(ITERM2_CONFIG_PATH)/com.googlecode.iterm2.plist
 
-.PHONY: install clean
+.PHONY: install clean terminfo
