--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -647,7 +647,7 @@
 	gAKACoAN0xAJChEVGVdOUy5rZXlzoxITFIADgASABaMWFxiABoAHgAiACVpJZGVudGlm
 	aWVyVVdpZHRoVkhpZGRlblEwI0BowAAAAAAACNIhIiMkWiRjbGFzc25hbWVYJGNsYXNz
 	ZXNcTlNEaWN0aW9uYXJ5oiMlWE5TT2JqZWN00xAJCicrGaMSExSAA4AEgAWjLC0YgAuA
-	DIAIgAlRMSNAdCGdsi0OVtIhIjM0Xk5TTXV0YWJsZUFycmF5ozM1JVdOU0FycmF5XxAP
+	DIAIgAlRMSNAczGdsi0OVtIhIjM0Xk5TTXV0YWJsZUFycmF5ozM1JVdOU0FycmF5XxAP
 	TlNLZXllZEFyY2hpdmVy0Tg5VUFycmF5gAEACAARABoAIwAtADIANwBGAEwAUQBcAGMA
 	ZgBoAGoAbABzAHsAfwCBAIMAhQCJAIsAjQCPAJEAnACiAKkAqwC0ALUAugDFAM4A2wDe
 	AOcA7gDyAPQA9gD4APwA/gEAAQIBBAEGAQ8BFAEjAScBLwFBAUQBSgAAAAAAAAIBAAAA
@@ -670,15 +670,15 @@
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>269 126 606 469 0 0 1440 900 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>269 383 796 473 0 0 1440 900 </string>
+	<string>269 435 1018 447 0 0 1440 900 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>99 316 592 584 0 0 1440 900 </string>
 	<key>NSWindow Frame com.apple.typography_panel_Hasklig-Regular</key>
 	<string>-1620 731 260 310 -1920 0 1920 1080 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>631 423 665 477 0 0 1440 900 </string>
+	<string>0 0 650 499 0 0 1920 1080 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>-1673 112 665 477 -1920 0 1920 1080 </string>
+	<string>628 420 665 477 0 0 1920 1080 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -1449,208 +1449,208 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.16609539091587067</real>
+				<real>0.19181996583938599</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.14402128756046295</real>
+				<real>0.14617142081260681</real>
 				<key>Red Component</key>
-				<real>0.12394571304321289</real>
+				<real>0.12683285772800446</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.23445107042789459</real>
+				<real>0.20610834658145905</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.16483330726623535</real>
+				<real>0.07032255083322525</real>
 				<key>Red Component</key>
-				<real>0.87127810716629028</real>
+				<real>0.5645938515663147</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.61091721057891846</real>
+				<real>0.61565852165222168</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.49453279376029968</real>
+				<real>0.65109741687774658</real>
 				<key>Red Component</key>
-				<real>0.34147018194198608</real>
+				<real>0.46455502510070801</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.70485258102416992</real>
+				<real>0.99999129772186279</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.62282425165176392</real>
+				<real>0.99997437000274658</real>
 				<key>Red Component</key>
-				<real>0.5693211555480957</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.12067507207393646</real>
+				<real>0.52074593305587769</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.51025301218032837</real>
+				<real>0.42553600668907166</real>
 				<key>Red Component</key>
-				<real>0.94215500354766846</real>
+				<real>0.29273521900177002</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.43064665794372559</real>
+				<real>0.34057667851448059</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.26897338032722473</real>
+				<real>0.19128309190273285</real>
 				<key>Red Component</key>
-				<real>0.51607394218444824</real>
+				<real>0.24134033918380737</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.42611724138259888</real>
+				<real>0.52057713270187378</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.31374865770339966</real>
+				<real>0.42788803577423096</real>
 				<key>Red Component</key>
-				<real>0.04735163226723671</real>
+				<real>0.054009675979614258</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.97501945495605469</real>
+				<real>0.79255306720733643</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.91039198637008667</real>
+				<real>0.7406609058380127</real>
 				<key>Red Component</key>
-				<real>0.86944288015365601</real>
+				<real>0.70601540803909302</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.61091721057891846</real>
+				<real>0.61565852165222168</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.49453279376029968</real>
+				<real>0.65109741687774658</real>
 				<key>Red Component</key>
-				<real>0.34147018194198608</real>
+				<real>0.46455502510070801</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.70485258102416992</real>
+				<real>0.99999129772186279</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.62282425165176392</real>
+				<real>0.99997437000274658</real>
 				<key>Red Component</key>
-				<real>0.5693211555480957</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.12067507207393646</real>
+				<real>0.52243638038635254</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.51025301218032837</real>
+				<real>0.42390361428260803</real>
 				<key>Red Component</key>
-				<real>0.94215500354766846</real>
+				<real>0.29416996240615845</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.43064665794372559</real>
+				<real>0.34057667851448059</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.26897338032722473</real>
+				<real>0.19128309190273285</real>
 				<key>Red Component</key>
-				<real>0.51607394218444824</real>
+				<real>0.24134033918380737</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.42611724138259888</real>
+				<real>0.52057713270187378</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.31374865770339966</real>
+				<real>0.42788803577423096</real>
 				<key>Red Component</key>
-				<real>0.04735163226723671</real>
+				<real>0.054009675979614258</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.97501945495605469</real>
+				<real>0.58937221765518188</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.91039198637008667</real>
+				<real>0.52406448125839233</real>
 				<key>Red Component</key>
-				<real>0.86944288015365601</real>
+				<real>0.47656098008155823</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.37519851326942444</real>
+				<real>0.32186272740364075</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.32078832387924194</real>
+				<real>0.25110143423080444</real>
 				<key>Red Component</key>
-				<real>0.28968816995620728</real>
+				<real>0.22601978480815887</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.23445107042789459</real>
+				<real>0.20610834658145905</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.16483330726623535</real>
+				<real>0.07032255083322525</real>
 				<key>Red Component</key>
-				<real>0.87127810716629028</real>
+				<real>0.5645938515663147</real>
 			</dict>
 			<key>BM Growl</key>
 			<true/>
@@ -1659,13 +1659,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.16609539091587067</real>
+				<real>0.19181998074054718</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.14402128756046295</real>
+				<real>0.14616937935352325</real>
 				<key>Red Component</key>
-				<real>0.12394571304321289</real>
+				<real>0.12683001160621643</real>
 			</dict>
 			<key>Background Image Location</key>
 			<string></string>
@@ -1714,11 +1714,11 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.99999129772186279</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.99997437000274658</real>
 				<key>Red Component</key>
 				<real>1</real>
 			</dict>
@@ -1765,13 +1765,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.97501945495605469</real>
+				<real>0.79255306720733643</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.91039198637008667</real>
+				<real>0.7406609058380127</real>
 				<key>Red Component</key>
-				<real>0.86944288015365601</real>
+				<real>0.70601540803909302</real>
 			</dict>
 			<key>Guid</key>
 			<string>1D1CB424-D1FF-49F0-88BA-31092F3A9D15</string>
@@ -2074,13 +2074,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.23445107042789459</real>
+				<real>0.20610834658145905</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.16483330726623535</real>
+				<real>0.07032255083322525</real>
 				<key>Red Component</key>
-				<real>0.87127810716629028</real>
+				<real>0.5645938515663147</real>
 			</dict>
 			<key>Minimum Contrast</key>
 			<real>0.0</real>
@@ -2111,26 +2111,26 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.16609539091587067</real>
+				<real>0.19181998074054718</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.14402128756046295</real>
+				<real>0.14616937935352325</real>
 				<key>Red Component</key>
-				<real>0.12394571304321289</real>
+				<real>0.12683001160621643</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.70485258102416992</real>
+				<real>0.58937221765518188</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.62282425165176392</real>
+				<real>0.52406448125839233</real>
 				<key>Red Component</key>
-				<real>0.5693211555480957</real>
+				<real>0.47656098008155823</real>
 			</dict>
 			<key>Send Code When Idle</key>
 			<false/>
@@ -2173,6 +2173,8 @@
 		</dict>
 	</array>
 	<key>NoSyncCommandHistoryHasEverBeenUsed</key>
+	<true/>
+	<key>NoSyncHaveWarnedAboutIncompatibleSoftware</key>
 	<true/>
 	<key>NoSyncHaveWarnedAboutPasteConfirmationChange</key>
 	<true/>
@@ -2234,7 +2236,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-06-01T15:58:53Z</date>
+	<date>2017-07-06T14:13:29Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
@@ -2253,6 +2255,10 @@
 	<false/>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
+	<key>findIgnoreCase_iTerm</key>
+	<true/>
+	<key>findRegex_iTerm</key>
+	<false/>
 	<key>iTerm Version</key>
 	<string>3.0.15</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
