--- a/wm/.chunkwmrc
+++ b/wm/.chunkwmrc
@@ -1,5 +1,12 @@
 #!/bin/bash
 
+if [ -r ~/.cache/wal/chunkwmcolors ]; then
+    source ~/.cache/wal/chunkwmcolors
+fi
+
+NFOCUS=$(echo $FOCUS | sed 's/#//')
+NPRESE=$(echo $PRESE | sed 's/#//')
+
 #
 # NOTE: specify the absolutepath to the directory to use when
 #       loading a plugin. '~' expansion is supported.
@@ -44,7 +51,7 @@ chunkc set window_float_next             0
 chunkc set window_float_center           1
 chunkc set window_region_locked          1
 
-chunkc set focused_border_color          0xff008097
+chunkc set focused_border_color          "$NFOCUS"
 chunkc set focused_border_width          5
 chunkc set focused_border_radius         0
 chunkc set focused_border_skip_floating  0
