Better cert generator Makefile

--- a/certs/Makefile
+++ b/certs/Makefile
@@ -1,31 +1,62 @@
-NAME     ?= localhost
 DOMAIN   ?= localhost
+NAME     ?= ${DOMAIN}
 
-KEY      ?= ${NAME}.key
+CAKEY    ?= CAkey.key
+CACERT   ?= CAcert.pem
+
 SIGN_REQ ?= ${NAME}.csr
 CERT     ?= ${NAME}.crt
+PEM      ?= ${NAME}.pem
+KEY      ?= ${NAME}.key
 
-SUBJECT = "/C=US/ST=Connecticut/O=/localityName=New Haven/commonName=${DOMAIN}/commonName=*.${DOMAIN}/organizationalUnitName=/emailAddress=/"
+CA = "/C=PL/ST=Wlkp/O=/localityName=Poznan/CN=Hauleth/emailAddress=lukasz@niemier.pl"
 
-all: ${CERT}
+SUBJECT = "/CN=*.${DOMAIN}"
 
-install: all
-	security import ${CERT}
-	security add-trusted-cert ${CERT}
+VERIFY_OPTS = -purpose sslserver -CAfile ${CACERT}
 
-clea:
-	$(RM) -rf ${KEY} ${CERT} ${SIGN_REQ}
+verify: ${PEM} ${CACERT}
+	openssl version
+	openssl x509 -noout -text -in "$<"
+	openssl verify ${VERIFY_OPTS} -verify_hostname ${DOMAIN} $<
+	openssl verify ${VERIFY_OPTS} -verify_hostname test.${DOMAIN} $<
 
-verify: ${CERT}
-	openssl x509 -noout -text -in $<
+clean:
+	$(RM) -f "${CERT}" "${SIGN_REQ}" "${PEM}" "${KEY}"
+
+${CAKEY}:
+	openssl genrsa -out "$@" 2048
+
+${CACERT}: ${CAKEY}
+	openssl req -new -key "$<" -out "$@" \
+		-subj ${CA} -x509 -nodes -sha256 -days 1825
+
+installCA: ${CACERT}
+	security import "$<"
+	security add-trusted-cert "$<"
+
+cleanCA:
+	security remove-trusted-cert "${CACERT}"
+	$(RM) -f "${CACERT}" "${CAKEY}"
+
+config.conf:
+	echo 'subjectAltName=$${ENV::SAN}' > "$@"
 
 ${KEY}:
 	openssl genrsa -out "$@" 2048
 
 ${SIGN_REQ}: ${KEY}
-	openssl req -new -sha256 -subj $(SUBJECT) -key "$<" -out "$@" -passin pass:""
+	openssl req -new -sha256 -subj $(SUBJECT) -key "$<" -out "$@" \
+		-addext "subjectAltName=DNS:${DOMAIN},DNS:*.${DOMAIN}"
 
-${CERT}: ${SIGN_REQ} ${KEY}
-	openssl x509 -req -days 365 -in "${SIGN_REQ}" -signkey "${KEY}" -out "$@"
+${CERT}: ${SIGN_REQ} ${CACERT} ${CAKEY} config.conf
+	SAN="DNS:${DOMAIN},DNS:*.${DOMAIN}" \
+		openssl x509 -req -out "$@" -in ${SIGN_REQ} \
+		-CA ${CACERT} -CAkey ${CAKEY} -CAcreateserial \
+		-days 1825 -sha256 \
+		-extfile config.conf
 
-.PHONY: all clean verify install
+${PEM}: ${CERT} ${KEY}
+	cat ${CERT} ${KEY} > "$@"
+
+.PHONY: clean verify install installCA cleanCA
