Cleanup Kitty configuration

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Iosevka Term SS10 Medium
-bold_font        Iosevka Term SS10 Bold
-italic_font      Iosevka Term SS10 Medium Italic
-bold_italic_font Iosevka Term SS10 Bold Italic
+font_family      Iosevka Term Medium
+bold_font        Iosevka Term Bold
+italic_font      Iosevka Term Medium Italic
+bold_italic_font Iosevka Term Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
@@ -176,7 +176,7 @@ cursor #ffffff
 #: in full screen programs that redraw the entire screen on each loop,
 #: because kitty is so fast that partial screen updates will be drawn.
 
-# sync_to_monitor yes
+sync_to_monitor no
 
 #: Sync screen updates to the refresh rate of the monitor. This
 #: prevents tearing (https://en.wikipedia.org/wiki/Screen_tearing)
@@ -295,11 +295,11 @@ window_padding_width 30.0
 
 #: Which edge to show the tab bar on, top or bottom
 
-# tab_bar_margin_width 0.0
+tab_bar_margin_width 30.0
 
 #: The margin to the left and right of the tab bar (in pts)
 
-# tab_bar_style fade
+tab_bar_style fade
 
 #: The tab bar style, can be one of: fade or separator. In the fade
 #: style, each tab's edges fade into the background color, in the
@@ -314,16 +314,16 @@ window_padding_width 30.0
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-# tab_separator " ┇"
+# tab_separator " ┇ "
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-# active_tab_foreground   #000
-# active_tab_background   #eee
+active_tab_foreground   #2b3240
+active_tab_background   #c1c9d4
 # active_tab_font_style   bold-italic
-# inactive_tab_foreground #444
-# inactive_tab_background #999
+inactive_tab_foreground #4a5265
+inactive_tab_background #2b3240
 # inactive_tab_font_style normal
 
 #: Tab bar colors and styles
@@ -337,7 +337,7 @@ background #2b3240
 
 #: The foreground and background colors
 
-background_opacity         1
+# background_opacity         1
 # dynamic_background_opacity no
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
@@ -441,7 +441,7 @@ color15 #c1c9d4
 #: to yes means that any background processes still using the terminal
 #: can fail silently because their stdout/stderr/stdin no longer work.
 
-# allow_remote_control no
+allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
@@ -481,7 +481,7 @@ term xterm-256color
 
 macos_thicken_font 0.0
 
-# macos_titlebar_color system
+macos_titlebar_color background
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, a value of
@@ -494,7 +494,7 @@ macos_thicken_font 0.0
 #: you are probably better off just hiding the titlebar with
 #: macos_hide_titlebar.
 
-macos_hide_titlebar yes
+# macos_hide_titlebar yes
 
 #: Hide the kitty window's title bar on macOS.
 
@@ -625,8 +625,6 @@ macos_hide_titlebar yes
 #: }}}
 
 #: Window management {{{
-
-# map cmd+n new_window
 
 #: You can open a new window running an arbitrary program, for
 #: example::
