Change Git comment char to semicolon to reduce conflict with markdown

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -1,6 +1,7 @@
 [core]
 	commitGraph = true
 	pager = "diff-so-fancy | less --tabs=4 -RFX"
+	commentChar = ";"
 [gc]
 	writeCommitGraph = true
 [alias]
