ft: flakify the configuration

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -109,4 +109,10 @@
 	thread = true
 	supersscc = self
 
+[gpg]
+	; format = ssh
+
+[gpg.ssh]
+	defaultKeyCommand = "ssh-add -L"
+
 # vim: ft=gitconfig noexpandtab sw=8
