--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -1,6 +1,9 @@
 [core]
 	commitGraph = true
-	pager = "diff-so-fancy | less --tabs=4 -RFX"
+
+[pager]
+	difftool = true
+	diff = "diff-so-fancy | less --tabs=4 -RFX"
 
 [init]
 	defaultBranch = master
@@ -21,18 +24,18 @@
 	cob = checkout -b
 	lg = log --color --graph --abbrev-commit --pretty=simple-oneline
 	rci = commit --amend --reuse-message HEAD
-	squash = rebase -i @{u}
+	squash = rebase --interactive --autosquash @{upstream}
 	st = status -sb
 	todo = grep -Ee '\\bTODO:?\\b'
 	fixme = grep -Ee '\\bFIX(ME)?:?\\b'
-	com = checkout master
+	com = "!git checkout $(git default-branch)"
 	skip = update-index --skip-worktree
 	unskip = update-index --no-skip-worktree
-	publish = push -u hauleth
-	cleanup = "!git branch --format=\"%(if:notequals=*)%(HEAD)%(then)%(if:notequals=${1:-master})%(refname:lstrip=2)%(then)%(refname:lstrip=2)%(end)%(end)\" --merged master | xargs -rpxL1 git branch -d"
+	default-branch = "!git symbolic-ref --short refs/remotes/origin/HEAD | sed 's|^origin/||'"
+	cleanup = "!git branch --format=\"%(if:notequals=*)%(HEAD)%(then)%(if:notequals=${1:-$(git default-branch)})%(refname:lstrip=2)%(then)%(refname:lstrip=2)%(end)%(end)\" --merged $(git default-branch) | xargs -rpxL1 git branch -d"
 
 [pretty]
-	simple-oneline = "%C(yellow)%h%C(auto)%d %s <%C(green)%aN%C(reset)> (%C(blue)%ar%C(reset))"
+	simple-oneline = "%C(yellow)%h%C(auto)%d %s [%C(green)%aN <%aE>%C(reset)] (%C(blue)%ar%C(reset))"
 
 [merge]
 	conflictstyle = diff3
@@ -51,8 +54,6 @@
 [rebase]
 	autostash = true
 	autosquash = true
-[credential]
-	helper = cache --timeout=3600
 [fetch]
 	prune = true
 [help]
@@ -67,7 +68,7 @@
 	suffix = "-rc"
 	suffix = "-pre"
 [commit]
-	gpgsign = true
+	gpgSign = true
 	verbose = true
 	cleanup = scissors
 
@@ -78,7 +79,7 @@
 	required = true
 
 [rerere]
-	enabled = true
+	enabled = false
 
 [diff]
 	indentHeuristic = true
@@ -90,7 +91,7 @@
 	xfuncname = "^(#+\\s+.*)$"
 
 [difftool]
-	prompt = true
+	prompt = false
 
 [difftool "difftastic"]
 	cmd = difft "$LOCAL" "$REMOTE"
